--- a/index.html
+++ b/index.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos/style.css">
     <title>Projeto Analisador de Números</title>
 </head>
 <body>
-    
+     <header>
+        <h1>Analisador de Números</h1>
+    </header>
+
+    <section>
+        <div>
+            Número (entre 1 e 100):
+            <input type="number" name="fnum" id="fnum">
+            <input type="button" value="Adicionar" onclick="adicionar()">
+            <br><select name="flista" id="flista" size="6"></select>
+            <br><input type="button" value="Finalizar">
+        </div>
+
+        <div id="res">
+           
+        </div>
+
+    </section>
+
+    <footer>
+        <p>Criado por <a href="https://github.com/Leonardo-de-Castro" target="_blank"><strong>Leonardo de Castro</strong></a></p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
